@@ -1,7 +1,0 @@
-Gnuplot.py is a Python package that interfaces to gnuplot, the popular
-open-source plotting program. It allows you to use gnuplot from within Python
-to plot arrays of data from memory, data files, or mathematical functions. If
-you use Python to perform computations or as `glue' for numerical programs, you
-can use this package to plot data on the fly as they are computed. And the
-combination with Python makes it is easy to automate things, including to
-create crude `animations' by plotting different datasets one after another.
