@@ -1,20 +1,0 @@
-# $NetBSD: Makefile,v 1.30 2022/01/10 23:46:48 wiz Exp $
-
-DISTNAME=	gnuplot-py-1.8
-PKGNAME=	${PYPKGPREFIX}-gnuplot-1.8
-PKGREVISION=	3
-CATEGORIES=	graphics python
-MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=gnuplot-py/}
-
-MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	http://gnuplot-py.sourceforge.net/
-COMMENT=	Python package that interfaces to gnuplot
-LICENSE=	gnu-lgpl-v2.1
-
-USE_LANGUAGES=	# empty
-
-PYTHON_VERSIONS_ACCEPTED=	27 # not yet ported as of 1.8
-
-.include "../../lang/python/egg.mk"
-.include "../../math/py-numpy/buildlink3.mk"
-.include "../../mk/bsd.pkg.mk"
