@@ -1,53 +1,0 @@
-@comment $NetBSD: PLIST,v 1.6 2012/04/08 20:21:49 wiz Exp $
-${PYSITELIB}/Gnuplot/Errors.py
-${PYSITELIB}/Gnuplot/Errors.pyc
-${PYSITELIB}/Gnuplot/Errors.pyo
-${PYSITELIB}/Gnuplot/PlotItems.py
-${PYSITELIB}/Gnuplot/PlotItems.pyc
-${PYSITELIB}/Gnuplot/PlotItems.pyo
-${PYSITELIB}/Gnuplot/_Gnuplot.py
-${PYSITELIB}/Gnuplot/_Gnuplot.pyc
-${PYSITELIB}/Gnuplot/_Gnuplot.pyo
-${PYSITELIB}/Gnuplot/__init__.py
-${PYSITELIB}/Gnuplot/__init__.pyc
-${PYSITELIB}/Gnuplot/__init__.pyo
-${PYSITELIB}/Gnuplot/demo.py
-${PYSITELIB}/Gnuplot/demo.pyc
-${PYSITELIB}/Gnuplot/demo.pyo
-${PYSITELIB}/Gnuplot/funcutils.py
-${PYSITELIB}/Gnuplot/funcutils.pyc
-${PYSITELIB}/Gnuplot/funcutils.pyo
-${PYSITELIB}/Gnuplot/gnuplot_Suites.py
-${PYSITELIB}/Gnuplot/gnuplot_Suites.pyc
-${PYSITELIB}/Gnuplot/gnuplot_Suites.pyo
-${PYSITELIB}/Gnuplot/gp.py
-${PYSITELIB}/Gnuplot/gp.pyc
-${PYSITELIB}/Gnuplot/gp.pyo
-${PYSITELIB}/Gnuplot/gp_cygwin.py
-${PYSITELIB}/Gnuplot/gp_cygwin.pyc
-${PYSITELIB}/Gnuplot/gp_cygwin.pyo
-${PYSITELIB}/Gnuplot/gp_java.py
-${PYSITELIB}/Gnuplot/gp_java.pyc
-${PYSITELIB}/Gnuplot/gp_java.pyo
-${PYSITELIB}/Gnuplot/gp_mac.py
-${PYSITELIB}/Gnuplot/gp_mac.pyc
-${PYSITELIB}/Gnuplot/gp_mac.pyo
-${PYSITELIB}/Gnuplot/gp_macosx.py
-${PYSITELIB}/Gnuplot/gp_macosx.pyc
-${PYSITELIB}/Gnuplot/gp_macosx.pyo
-${PYSITELIB}/Gnuplot/gp_unix.py
-${PYSITELIB}/Gnuplot/gp_unix.pyc
-${PYSITELIB}/Gnuplot/gp_unix.pyo
-${PYSITELIB}/Gnuplot/gp_win32.py
-${PYSITELIB}/Gnuplot/gp_win32.pyc
-${PYSITELIB}/Gnuplot/gp_win32.pyo
-${PYSITELIB}/Gnuplot/termdefs.py
-${PYSITELIB}/Gnuplot/termdefs.pyc
-${PYSITELIB}/Gnuplot/termdefs.pyo
-${PYSITELIB}/Gnuplot/test.py
-${PYSITELIB}/Gnuplot/test.pyc
-${PYSITELIB}/Gnuplot/test.pyo
-${PYSITELIB}/Gnuplot/utils.py
-${PYSITELIB}/Gnuplot/utils.pyc
-${PYSITELIB}/Gnuplot/utils.pyo
-${PYSITELIB}/${EGG_FILE}
